language/move-lang/tests/move_check/typing/ignore_inferred_resource.move
module 0x8675309::M {
    struct S<phantom T> {}
    fun no() {
        S{};
    }
}
